--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-local": "ng serve --open=true --port=4005 --disable-host-check=true",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run draw-b4:serve-ssr",
+    "serve:ssr": "node dist/draw-b4/server/main.js",
+    "build:ssr": "ng build --prod && ng run draw-b4:server:production",
+    "prerender": "ng run draw-b4:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +23,10 @@
     "@angular/forms": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
+    "@angular/platform-server": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@nguniversal/express-engine": "^10.0.2",
+    "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -27,6 +35,8 @@
     "@angular-devkit/build-angular": "~0.1000.8",
     "@angular/cli": "~10.0.8",
     "@angular/compiler-cli": "~10.0.14",
+    "@nguniversal/builders": "^10.0.2",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
