--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/memory-cache": "0.2.0",
     "compression": "1.7.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
