--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "hammerjs": "2.0.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.8",
