--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@nguniversal/express-engine": "^10.0.2",
+    "ng-animate-scroll": "7.1.0",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -42,6 +43,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/memory-cache": "0.2.0",
+    "@types/hammerjs": "2.0.35",
     "compression": "1.7.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
