--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/platform-server": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@angular/cdk": "~10.2.7",
+    "@angular/material": "~10.2.7",
     "@nguniversal/express-engine": "^10.0.2",
     "ng-animate-scroll": "7.1.0",
     "express": "^4.15.2",
