--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,9 @@
     "src/**/*.d.ts"
   ],
   "exclude": [
+    "server.ts",
+    "**/*.server.*.ts",
+    "**/*.server.ts",
     "test.ts",
     "**/*.spec.ts",
     "**/*.fake.ts",
