--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@angular/cdk": "~10.2.7",
     "@angular/material": "~10.2.7",
     "@nguniversal/express-engine": "^10.0.2",
-    "@types/google.analytics": "0.0.41",
     "ng-animate-scroll": "7.1.0",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3",
-    "hammerjs": "2.0.8"
+    "hammerjs": "2.0.8",
+    "ngx-seo": "5.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.8",
@@ -47,6 +47,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/memory-cache": "0.2.0",
     "@types/hammerjs": "2.0.35",
+    "@types/google.analytics": "0.0.41",
     "compression": "1.7.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
