--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,8 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
+              { "glob": "favicon.*", "input": "src/assets/icons", "output": "/" },
+              "src/assets/images",
               "src/robots.txt"
             ],
             "styles": [
