--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "replace-in-file": "6.2.0"
   }
 }
