--- a/web.config
+++ b/web.config
@@ -11,13 +11,13 @@
           <conditions>
             <add negate="true" input="{REQUEST_FILENAME}" pattern="index.js" />
           </conditions>
-          <action type="Rewrite" url="dist/draw-b4/browser/{R:0}" />
+          <action type="Rewrite" url="dist/ux-stencil/browser/{R:0}" />
         </rule>
       </rules>
     </rewrite>
     <httpErrors errorMode="Custom" defaultResponseMode="File">
       <remove statusCode="404"/>
-      <error statusCode="404" path="dist\draw-b4\browser\index.html" />
+      <error statusCode="404" path="dist\ux-stencil\browser\index.html" />
     </httpErrors>
   </system.webServer>
 </configuration>
