--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "paths": {
       "@ux-stencil/*": [
-        "src/app/*"
+        "src/app/features/*"
       ]
     },
     "outDir": "./dist/out-tsc",
