Added https redirect.

--- a/web.config
+++ b/web.config
@@ -6,6 +6,13 @@
     </handlers>
     <rewrite>
       <rules>
+        <rule name="Force HTTPS" stopProcessing="true">
+           <match url="(.*)" />
+            <conditions>
+             <add input="{HTTPS}" pattern="off" />
+            </conditions>
+           <action type="Redirect" url="https://ux-stencil.net/{R:1}" appendQueryString="true" redirectType="Permanent" />
+		    </rule>
         <rule name="wwwroot-static" stopProcessing="true">
           <match url=".*" />
           <conditions>
