--- a/web.config
+++ b/web.config
@@ -6,6 +6,10 @@
     </handlers>
     <rewrite>
       <rules>
+        <rule name="api" stopProcessing="true">
+            <match url="api/.*" ignoreCase="true" />
+            <action type="None" />
+        </rule>
         <rule name="Force HTTPS" stopProcessing="true">
            <match url="(.*)" />
             <conditions>
