Finished authentication flows.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@types/memory-cache": "0.2.0",
     "@types/hammerjs": "2.0.35",
     "@types/google.analytics": "0.0.41",
+    "@types/facebook-js-sdk": "3.3.2",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.54",
     "compression": "1.7.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
