--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start-local": "ng serve --open=true --port=4205 --proxy-config proxies/local.proxy.json --disable-host-check=true --ssl=true",
+    "start-prod": "ng serve --open=true --port=4205 --proxy-config proxies/prod.proxy.json --disable-host-check=true --ssl=true",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
