--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,9 +6,9 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
   ],
-  "include": [
+"include": [
     "src/**/*.d.ts"
   ],
   "exclude": [
